Expandablelist adapter for tags and unread count
Signed-off-by: Jonas Kalderstam <jonas@kalderstam.se>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="url">URL</string>
     <string name="title">Title</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tag">Tag</string>
 
 </resources>
