--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,7 @@
     <string name="title">Title</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="tag">Tag</string>
+    <string name="add_feed_search_hint">URL or search query</string>
+    <string name="select_account">Select account</string>
 
 </resources>
