Improve empty screens, and sync after account selection
Signed-off-by: Jonas Kalderstam <jonas@kalderstam.se>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,11 +27,16 @@
     <string name="on_date">%1$s</string>
     <string name="save">Save</string>
     <string name="empty_feed_top">Nothing to read here. Would you like to…</string>
-    <string
-        name="empty_feed_open"><![CDATA[<font color="#33B5E5">Open</font> another feed?]]></string>
-    <string
-        name="empty_feed_add"><![CDATA[<font color="#33B5E5">Add</font> more feeds?]]></string>
-    <string name="empty_no_feeds"><![CDATA[Nothing to read yet.<p/>Would you like to
-        <font color="#33B5E5">add</font> some feeds?]]></string>
+    <string name="empty_feed_open">
+        <![CDATA[<font color="#33B5E5">Open</font> another feed?]]></string>
+    <string name="empty_feed_add">
+        <![CDATA[<font color="#33B5E5">Add</font> more feeds?]]></string>
+    <string name="empty_no_feeds_top">Nothing to read yet.\nGet started
+        by…</string>
+    <string name="empty_no_feeds_login">
+        <![CDATA[<font color="#33B5E5">Logging in</font> to the
+        server and…]]></string>
+    <string  name="empty_no_feeds_add">
+        <![CDATA[<font color="#33B5E5">Adding</font> some feeds]]></string>
 
 </resources>
