--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,6 @@
         <![CDATA[<font color="#33B5E5">Adding</font> some feeds]]></string>
     <string name="no_feeds_found">Couldn\'t find any relevant feeds. Try to search for a single word.</string>
     <string name="search_feed_empty_hint">Enter a feed address or a topic to search for</string>
+    <string name="new_items_touch_to_view">New items! Touch to view them</string>
 
 </resources>
