--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,7 @@
     <string name="new_items_available">New items available</string>
     <string name="view">View</string>
     <string name="no_tag">No tag</string>
+    <string name="username">Username</string>
+    <string name="server_address">Server address</string>
 
 </resources>
