--- a/server/debian/changelog
+++ b/server/debian/changelog
@@ -1,3 +1,10 @@
+feeder (1.1.1) stable; urgency=low
+
+  * Fixed missing feedparser dependency
+
+ -- Jonas Kalderstam <jonas@cowboyprogrammer.org>  Mon, 07 Feb 2017 22:25:00 +0100
+
+
 feeder (1.1.0) stable; urgency=low
 
   * Fixed scripts.
