--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="url">URL</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="tag">Tag</string>
-    <string name="add_feed_search_hint">URL or search query</string>
+    <string name="add_feed_search_hint">URL to feed</string>
     <string name="select_account">Select account</string>
     <string name="title">Title</string>
 
@@ -39,7 +39,7 @@
     <string  name="empty_no_feeds_add">
         <![CDATA[<font color="#607D8B">Adding</font> some feeds]]></string>
     <string name="no_feeds_found">Couldn\'t find any relevant feeds. Try to search for a single word.</string>
-    <string name="search_feed_empty_hint">Enter a feed address or a topic to search for</string>
+    <string name="search_feed_empty_hint">Enter a feed address</string>
     <string name="mark_all_as_read">Mark all as read</string>
     <string name="edit_feed">Edit feed</string>
     <string name="delete_feed">Delete feed</string>
