fix german strings

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -27,12 +27,12 @@
   <string name="on_date">%1$s</string>
   <string name="save">Speichern</string>
   <string name="empty_feed_top">Hier gibt es nichts zu lesen. Würdest du gerne…</string>
-  <string name="empty_feed_open">Einen anderen Feed<font color=\"#607D8B\">öffnen</font>?</string>
-  <string name="empty_feed_add">Mehr Feeds<font color=\"#607D8B\">hinzufügen</font>?</string>
+  <string name="empty_feed_open"><![CDATA[Einen anderen Feed<font color="#607D8B">öffnen</font>?]]></string>
+  <string name="empty_feed_add"><![CDATA[Mehr Feeds<font color="#607D8B">hinzufügen</font>?]]></string>
   <string name="empty_no_feeds_top">Noch nichts zu lesen.\n
     Leg los indem</string>
-  <string name="empty_no_feeds_login">Beim Server <font color=\"#607D8B\">einloggen</font> und…</string>
-  <string name="empty_no_feeds_add">Einige Feeds<font color=\"#607D8B\">hinzugefügen</font></string>
+  <string name="empty_no_feeds_login"><![CDATA[Beim Server <font color="#607D8B">einloggen</font> und…]]></string>
+  <string name="empty_no_feeds_add"><![CDATA[Einige Feeds<font color="#607D8B">hinzugefügen</font>]]></string>
   <string name="no_feeds_found">Konnte keine relevanten Feeds finden. Versuche nach einem einzelnen Wort zu suchen.</string>
   <string name="search_feed_empty_hint">Gebe eine Feed URL ein</string>
   <string name="mark_all_as_read">Alles als gelesen markieren</string>
