--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -1,58 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Feeder</string>
-    <string name="navigation_drawer_open">ナビゲーションドロワーを開く</string>
-    <string name="navigation_drawer_close">ナビゲーションドロワーを閉じる</string>
-    <string name="action_settings">設定</string>
-    <string name="add_feed">フィードを追加</string>
-    <string name="title_activity_edit_feed">フィードを購読</string>
-    <string name="url">URL</string>
-    <string name="tag">タグ</string>
-    <string name="add_feed_search_hint">フィードの URL</string>
-    <string name="select_account">アカウントの選択</string>
-    <string name="title">タイトル</string>
+  <string name="app_name">Feeder</string>
+  <string name="navigation_drawer_open">ナビゲーションドロワーを開く</string>
+  <string name="navigation_drawer_close">ナビゲーションドロワーを閉じる</string>
+  <string name="action_settings">設定</string>
+  <string name="add_feed">フィードを追加</string>
+  <string name="title_activity_edit_feed">フィードを購読</string>
+  <string name="url">URL</string>
+  <string name="tag">タグ</string>
+  <string name="add_feed_search_hint">フィードの URL</string>
+  <string name="select_account">アカウントの選択</string>
+  <string name="title">タイトル</string>
 
-    <string name="by_author_on_date">作者 %1$s, %2$s</string>
-    <string name="on_date">%1$s</string>
-    <string name="save">保存</string>
-    <string name="empty_feed_top">ここに読むものはありません。 したいことは…</string>
-    <string name="empty_feed_open">
+  <string name="by_author_on_date">作者 %1$s, %2$s</string>
+  <string name="on_date">%1$s</string>
+  <string name="save">保存</string>
+  <string name="empty_feed_top">ここに読むものはありません。 したいことは…</string>
+  <string name="empty_feed_open">
         <![CDATA[別のフィードを <font color="#607D8B">開く</font>?]]></string>
-    <string name="empty_feed_add">
+  <string name="empty_feed_add">
         <![CDATA[フィードを <font color="#607D8B">追加</font>?]]></string>
-    <string name="empty_no_feeds_top">まだ読むものはありません。\n始めましょう
+  <string name="empty_no_feeds_top">まだ読むものはありません。\n始めましょう
         </string>
-    <string name="empty_no_feeds_login">
+  <string name="empty_no_feeds_login">
         <![CDATA[サーバーに <font color="#607D8B">ログイン中</font>
         …]]></string>
-    <string  name="empty_no_feeds_add">
+  <string name="empty_no_feeds_add">
         <![CDATA[フィードの <font color="#607D8B">追加中</font>]]></string>
-    <string name="no_feeds_found">関連するフィードは見つかりませんでした。 単語一つで検索してみてください。</string>
-    <string name="search_feed_empty_hint">フィードのアドレスを入力</string>
-    <string name="mark_all_as_read">すべて既読にする</string>
-    <string name="edit_feed">フィードを編集</string>
-    <string name="delete_feed">フィードを削除</string>
-    <string name="show_all_items">すべてのアイテムを表示</string>
-    <string name="show_unread_items">未読のアイテムを表示</string>
-    <string name="new_items_available">新しいアイテムが利用可能です</string>
-    <string name="view">表示</string>
-    <string name="no_tag">タグなし</string>
-    <string name="username">ユーザー名</string>
-    <string name="server_address">サーバーアドレス</string>
-    <string name="night_mode">夜間モード</string>
-    <string name="notify_for_new_items">新しいアイテムの通知</string>
-    <string name="toggle_read_status">既読/未読の切り替え</string>
-    <string name="open_link_in_browser">リンクをブラウザーで開く</string>
-    <string name="open_enclosed_media">閉鎖されたメディアを開く</string>
-    <string name="sync">同期</string>
-    <string name="export_feeds_to_opml">OPML にフィードをエクスポート</string>
-    <string name="import_feeds_from_opml">OPML からフィードをインポート</string>
-    <string name="view_debug_log">デバッグログを表示</string>
-    <string name="new_based_on_this">これに基づき新規</string>
-    <string name="indicator_for_mark_as_read">既読のインジケータ―</string>
-    <string name="share">共有</string>
-    <string name="no_such_feed">そのようなフィードは見つかりませんでした。 https を使用してみてください。</string>
-    <string name="nothing_to_display">表示するものはありません!</string>
+  <string name="no_feeds_found">関連するフィードは見つかりませんでした。 単語一つで検索してみてください。</string>
+  <string name="search_feed_empty_hint">フィードのアドレスを入力</string>
+  <string name="mark_all_as_read">すべて既読にする</string>
+  <string name="edit_feed">フィードを編集</string>
+  <string name="delete_feed">フィードを削除</string>
+  <string name="show_all_items">すべてのアイテムを表示</string>
+  <string name="show_unread_items">未読のアイテムを表示</string>
+  <string name="new_items_available">新しいアイテムが利用可能です</string>
+  <string name="view">表示</string>
+  <string name="no_tag">タグなし</string>
+  <string name="username">ユーザー名</string>
+  <string name="server_address">サーバーアドレス</string>
+  <string name="night_mode">夜間モード</string>
+  <string name="notify_for_new_items">新しいアイテムの通知</string>
+  <string name="toggle_read_status">既読/未読の切り替え</string>
+  <string name="open_link_in_browser">リンクをブラウザーで開く</string>
+  <string name="open_enclosed_media">閉鎖されたメディアを開く</string>
+  <string name="sync">同期</string>
+  <string name="export_feeds_to_opml">OPML にフィードをエクスポート</string>
+  <string name="import_feeds_from_opml">OPML からフィードをインポート</string>
+  <string name="view_debug_log">デバッグログを表示</string>
+  <string name="new_based_on_this">これに基づき新規</string>
+  <string name="indicator_for_mark_as_read">既読のインジケータ―</string>
+  <string name="share">共有</string>
+  <string name="no_such_feed">そのようなフィードは見つかりませんでした。 https を使用してみてください。</string>
+  <string name="nothing_to_display">表示するものはありません!</string>
+
+  <string name="sync_option_manually">マニュアル</string>
+  <string name="sync_option_every_hour">毎時</string>
+  <string name="sync_option_every_3_hours">3時間ごと</string>
+  <string name="sync_option_every_6_hours">6時間ごと</string>
+  <string name="sync_option_every_12_hours">12時間ごと</string>
+  <string name="sync_option_every_day">毎日</string>
 
 </resources>
