--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,22 +51,12 @@
   <string name="title_activity_settings">Settings</string>
   <string name="all_feeds">All feeds</string>
 
-  <string-array name="pref_sync_frequency_titles">
-    <item>Manually</item>
-    <item>Every hour</item>
-    <item>Every 3 hours</item>
-    <item>Every 6 hours</item>
-    <item>Every 12 hours</item>
-    <item>Every day</item>
-  </string-array>
-  <string-array name="pref_sync_frequency_values">
-    <item>0</item>
-    <item>1</item>
-    <item>3</item>
-    <item>6</item>
-    <item>12</item>
-    <item>24</item>
-  </string-array>
+  <string name="sync_option_manually">Manually</string>
+  <string name="sync_option_every_hour">Every hour</string>
+  <string name="sync_option_every_3_hours">Every 3 hours</string>
+  <string name="sync_option_every_6_hours">Every 6 hours</string>
+  <string name="sync_option_every_12_hours">Every 12 hours</string>
+  <string name="sync_option_every_day">Every day</string>
 
   <string name="synchronization">Synchronization</string>
   <string name="only_on_wifi">Only on WiFi</string>
