Added option for maximum number of items per feed
And bumped default value from 50 to 100

Fixes #126

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,5 +77,6 @@
   <string name="open_links_with">Open links with</string>
   <string name="reader_settings">Reader</string>
   <string name="open_link_in_web_view">Open link in Web view</string>
+  <string name="max_feed_items">Maximum number of items per feed</string>
 
 </resources>
